# cardioEMI

./: .gitignore  README.md  main.py  native_assembly.py  requirements.txt  test_native_assembly.py  utils.py
dolfinx-ginkgo/: CMakeLists.txt  Dockerfile  Dockerfile.bddc  README.md  docker-build.sh
dolfinx-ginkgo/cmake/: dolfinx_ginkgo-config.cmake.in
dolfinx-ginkgo/cpp/dolfinx_ginkgo/: DistributedMatrix.h  DistributedVector.h  Partition.h  Solver.h  convert.h  ginkgo.h
dolfinx-ginkgo/examples/: CMakeLists.txt  poisson.cpp
dolfinx-ginkgo/python/dolfinx_ginkgo/: __init__.py  _cpp.cpp  solver.py
dolfinx-ginkgo/tests/: CMakeLists.txt  test_convert.cpp  test_dd_matrix.cpp  test_dd_matrix_python.py  test_distributed_matrix.cpp  test_partition.cpp  test_python_bindings.py  test_solver.cpp
geometry/: compute_component_partitions.py  convert_pts_elem.py
viz/: index.html  server.py
viz/css/: styles.css
viz/data/pepe36_colored/: mesh_metadata.json
viz/data/pepe36_colored_sim/: mesh_metadata.json  pair_mapping.json
viz/data/pepe36_sim/: mesh_metadata.json
viz/data/robin-24335/: mesh_metadata.json
viz/data/robin_sim/: mesh_metadata.json
viz/js/: app.js  config-manager.js  mesh-loader.js  simulation-runner.js  viewer.js
viz/scripts/: convert_hdf5.py  generate_viz_from_output.py  video_exporter.py
